Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5989

connect: max(indexed) doesn't work

    XMLWordPrintable

Details

    Description

      After the latest merge with 10.0-connect the following stopped working:

      CREATE TABLE t1 (c INT PRIMARY KEY) ENGINE=CONNECT TABLE_TYPE=CSV;
      INSERT t1 VALUES (1),(2);
      SELECT MAX(c) FROM t1;

      This happens because index_flags() now have HA_READ_ORDER, but index_last() is still not implemented.

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            serg Sergei Golubchik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.