- FIX MDEV-5989 (max(indexed) doesn't work)   By implementing index_last modified:   storage/connect/ha_connect.cc   storage/connect/ha_connect.h   storage/connect/xindex.cpp

- Adding the TYPE_BIN Connect internal type
  (not tested and not used yet)
modified:
  storage/connect/global.h
  storage/connect/value.cpp
  storage/connect/value.h